src/test/ui/const-generics/const-param-before-other-params.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-param-before-other-params.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error: incorrect parameter order
  --> $DIR/const-param-before-other-params.rs:4:7
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {}
   |       ^^^^^^^^^^^^^^^^^ help: reorder the parameters: `<'a, const X: ()>`

error: incorrect parameter order
  --> $DIR/const-param-before-other-params.rs:5:7
   |
LL | fn foo<const X: (), T>(_: &T) {}
   |       ^^^^^^^^^^^^^^^^ help: reorder the parameters: `<T, const X: ()>`

error: aborting due to 2 previous errors

